--- a/Tienda/templates/Productos/lista_productos.html
+++ b/Tienda/templates/Productos/lista_productos.html
@@ -21,7 +21,9 @@
                     <h5>{{ p.nombre }}</h5>
                     <p>{{ p.autor }}</p>
                     <p>${{ p.precio }}</p>
-
+                    <button class="btn btn-success" onclick="agregar('{{ p.id }}')">
+                    Agregar al carrito
+                    </button>
                     {% if user.rol == "superadmin" %}
                     <a href="{% url 'editar_producto' p.id %}" class="btn btn-warning btn-sm">Editar</a>
                     <a href="{% url 'eliminar_producto' p.id %}" class="btn btn-danger btn-sm">Eliminar</a>
